--- a/Openlibrary/Base.lproj/Main.storyboard
+++ b/Openlibrary/Base.lproj/Main.storyboard
@@ -19,37 +19,45 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOg-Uq-Fet">
-                                <rect key="frame" x="346" y="381" width="92" height="30"/>
+                                <rect key="frame" x="254" y="-39" width="92" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="92" id="oQP-bk-nlf"/>
+                                    <constraint firstAttribute="width" constant="92" id="gSX-0t-HDG"/>
                                 </constraints>
                                 <state key="normal" title="Buscar ISBN"/>
                                 <connections>
                                     <action selector="ButtonBuscarISBN:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YKa-Kp-ljn"/>
-                                    <segue destination="10M-Oq-Ji3" kind="show" id="eJW-Ir-itd"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkg-Rl-avi">
-                                <rect key="frame" x="162" y="263" width="276" height="30"/>
+                                <rect key="frame" x="196" y="258" width="208" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="276" id="zzu-DI-2cJ"/>
+                                    <constraint firstAttribute="width" constant="208" id="LN8-ee-Qjf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <action selector="textFieldDoneEditing:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="yTf-ec-fGJ"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Gkg-oy-Sc2"/>
+                                    <segue destination="10M-Oq-Ji3" kind="show" id="zEe-a9-MMy"/>
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Introduzca el ISBN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uNl-Mf-JWG">
-                                <rect key="frame" x="230" y="189" width="141" height="21"/>
+                                <rect key="frame" x="230" y="213" width="141" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="A1t-iD-3OC">
+                                <rect key="frame" x="15" y="263" width="577" height="325"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32V-ve-aZG">
-                                <rect key="frame" x="162" y="381" width="62" height="30"/>
+                                <rect key="frame" x="269" y="303" width="62" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="62" id="Rhe-4c-ctx"/>
+                                    <constraint firstAttribute="width" constant="62" id="dY3-LU-m1z"/>
                                 </constraints>
                                 <state key="normal" title="Limpiar"/>
                                 <connections>
@@ -59,19 +67,55 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pkg-Rl-avi" firstAttribute="leading" secondItem="32V-ve-aZG" secondAttribute="leading" id="08A-RK-WiM"/>
-                            <constraint firstItem="pkg-Rl-avi" firstAttribute="centerX" secondItem="uNl-Mf-JWG" secondAttribute="centerX" id="Ids-0s-O3M"/>
-                            <constraint firstItem="mOg-Uq-Fet" firstAttribute="baseline" secondItem="32V-ve-aZG" secondAttribute="baseline" id="VhG-S4-vsL"/>
-                            <constraint firstItem="pkg-Rl-avi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bhX-yD-HvQ"/>
-                            <constraint firstItem="pkg-Rl-avi" firstAttribute="top" secondItem="uNl-Mf-JWG" secondAttribute="bottom" constant="53" id="cMT-Go-zUS"/>
-                            <constraint firstItem="pkg-Rl-avi" firstAttribute="trailing" secondItem="mOg-Uq-Fet" secondAttribute="trailing" id="fll-Ml-5Dx"/>
-                            <constraint firstItem="uNl-Mf-JWG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="125" id="oes-hZ-yZa"/>
-                            <constraint firstItem="32V-ve-aZG" firstAttribute="top" secondItem="pkg-Rl-avi" secondAttribute="bottom" constant="88" id="zDF-zu-7ef"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="A1t-iD-3OC" secondAttribute="trailing" constant="-15" id="1Fp-MG-8V7"/>
+                            <constraint firstItem="32V-ve-aZG" firstAttribute="centerX" secondItem="pkg-Rl-avi" secondAttribute="centerX" id="6kX-0S-cbk"/>
+                            <constraint firstItem="pkg-Rl-avi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9jf-4a-3Dk"/>
+                            <constraint firstItem="A1t-iD-3OC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="DA9-b6-0g9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="A1t-iD-3OC" secondAttribute="bottom" constant="8" symbolic="YES" id="ErQ-z3-Pqj"/>
+                            <constraint firstItem="uNl-Mf-JWG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HmP-1u-6wX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="32V-ve-aZG" secondAttribute="trailing" constant="43" id="JRg-28-o5G"/>
+                            <constraint firstItem="32V-ve-aZG" firstAttribute="top" secondItem="pkg-Rl-avi" secondAttribute="bottom" constant="15" id="KLV-i6-mAi"/>
+                            <constraint firstItem="A1t-iD-3OC" firstAttribute="top" secondItem="32V-ve-aZG" secondAttribute="bottom" constant="16" id="LK2-9Y-nUe"/>
+                            <constraint firstItem="uNl-Mf-JWG" firstAttribute="centerX" secondItem="mOg-Uq-Fet" secondAttribute="centerX" id="MF2-9r-ssf"/>
+                            <constraint firstItem="32V-ve-aZG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RIe-de-rtH"/>
+                            <constraint firstItem="A1t-iD-3OC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-5" id="Z97-q0-0do"/>
+                            <constraint firstItem="pkg-Rl-avi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZBE-Fc-HDi"/>
+                            <constraint firstItem="mOg-Uq-Fet" firstAttribute="top" secondItem="pkg-Rl-avi" secondAttribute="bottom" constant="33" id="c4d-ZD-jJZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="A1t-iD-3OC" secondAttribute="trailing" constant="-12" id="eYN-fz-Zmc"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="A1t-iD-3OC" secondAttribute="bottom" constant="12" id="fep-ra-Q5Q"/>
+                            <constraint firstItem="pkg-Rl-avi" firstAttribute="centerX" secondItem="uNl-Mf-JWG" secondAttribute="centerX" id="iF7-wj-MPk"/>
+                            <constraint firstItem="uNl-Mf-JWG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="52" id="jJF-SJ-Dyn"/>
+                            <constraint firstItem="32V-ve-aZG" firstAttribute="leading" secondItem="pkg-Rl-avi" secondAttribute="trailing" constant="37" id="kdD-8W-pJI"/>
+                            <constraint firstItem="pkg-Rl-avi" firstAttribute="top" secondItem="uNl-Mf-JWG" secondAttribute="bottom" constant="24" id="lFX-dQ-53P"/>
+                            <constraint firstItem="uNl-Mf-JWG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="149" id="o7M-Ml-8Wb"/>
+                            <constraint firstItem="mOg-Uq-Fet" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oDp-hN-dnD"/>
+                            <constraint firstItem="A1t-iD-3OC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sN8-mw-AxU"/>
+                            <constraint firstItem="y3c-jy-aDJ" firstAttribute="top" secondItem="mOg-Uq-Fet" secondAttribute="bottom" constant="73" id="wpN-Ul-GH5"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="A1t-iD-3OC"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="c4d-ZD-jJZ"/>
+                                <exclude reference="oDp-hN-dnD"/>
+                                <exclude reference="ZBE-Fc-HDi"/>
+                                <exclude reference="HmP-1u-6wX"/>
+                                <exclude reference="jJF-SJ-Dyn"/>
+                                <exclude reference="1Fp-MG-8V7"/>
+                                <exclude reference="DA9-b6-0g9"/>
+                                <exclude reference="sN8-mw-AxU"/>
+                                <exclude reference="JRg-28-o5G"/>
+                                <exclude reference="RIe-de-rtH"/>
+                                <exclude reference="kdD-8W-pJI"/>
+                                <exclude reference="ErQ-z3-Pqj"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="jaR-Nm-qMT"/>
                     <connections>
                         <outlet property="TextoISBN" destination="pkg-Rl-avi" id="yku-wr-YTA"/>
+                        <outlet property="ViewTextISBN" destination="A1t-iD-3OC" id="d4t-y1-ywy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -95,7 +139,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
